--- a/core/src/main/resources/org/akaza/openclinica/i18n/format.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format.properties
@@ -2,14 +2,25 @@
 #########################################
 # date_format
 #########################################
-# The 'date_format' property is used in the text of date field,
-# to instruct the user which format the application is using.
+# The 'date_format' property is used by Validator to build error
+# message about what format should be for a date UI level
+# (UpdateParticipant, ViewGMCEvents) to instruct user what  date
+# format should be used should be identical to date_format_string
 # Years may not be 2 digits in the application.
 #########################################
+#default: date_format = DD-MMM-YYYY 
+date_format = DD/MM/YYYY 
 
-date_format = DD-MMM-YYYY
 
-date_format_calender = %d-%b-%Y
+#########################################
+# date_format_calender
+#########################################
+# The 'date_format_calender' property is used to generate dates
+# from Calendar Widget.
+# Years may not be 2 digits in the application.
+#########################################
+#default: date_format_calender = %d-%b-%Y
+date_format_calender = %d/%m/%Y
 
 #########################################
 # date_format_string
@@ -18,11 +29,17 @@ date_format_calender = %d-%b-%Y
 # in the system, and is used by the application side only.
 # Years may not be 2 digits in the application.
 #########################################
-date_format_string = dd-MMM-yyyy
 
-date_format_string_ds = yyyy-MM-dd
+#used to display format on jsp & build resourceBundle
+#default: date_format_string = dd-MMM-yyyy
+date_format_string = dd/MM/yyyy
 
-#date_time_format_string = MM/dd/yyyy hh:mm:ss a
+
+#should be removed
+#default: date_format_string_ds = yyyy-MM-dd 
+date_format_string_ds = dd/MM/yyyy
+
+
 #########################################
 # date_format_year
 #########################################
@@ -33,11 +50,15 @@ date_format_string_ds = yyyy-MM-dd
 date_format_year = YYYY
 
 #########################################
-# The 'date_format_year' property is used in the text of a year-month field,
+# The 'date_format_year_month' property is used in the text of a year-month field,
 # to instruct the user which format year-month should be submitted.
 # Years may not be 2 digits in the application.
 #########################################
-date_format_year_month = MMM-yyyy
+
+#used by Validator for partial date error message,
+#ODMExtractDao. 
+#default: date_format_year_month = MMM-yyyy
+date_format_year_month = MM/yyyy
 
 #########################################
 # date_regexp
@@ -47,7 +68,10 @@ date_format_year_month = MMM-yyyy
 # application side only.
 # Years may not be 2 digits in the application.
 #########################################
-date_regexp = [0-9]{1,2}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{4}
+
+#used to build an error message for date format
+#default: date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
+date_regexp = [0-9]{1,2}/[0-9]{1,2}}[0-9]{4}
 
 #########################################
 # date_time_format
@@ -56,8 +80,8 @@ date_regexp = [0-9]{1,2}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{4}
 # field, to instruct the user which format to submit date/time fields.
 # Years may not be 2 digits in the application.
 #########################################
-#date_time_format = MM/DD/YYYY HH:MM a
-date_time_format = DD-MMM-YYYY HH:MM
+#default: date_time_format = DD-MMM-YYYY HH:MM
+date_time_format = DD/MM/YYYY HH:MM
 
 #########################################
 # date_time_format_string
@@ -65,8 +89,13 @@ date_time_format = DD-MMM-YYYY HH:MM
 # The 'date_time_format_string' property is used to generate date/time
 # fields in the system, and is used on the application side only.
 # Years may not be 2 digits in the application.
+# Used for 'Schedule / Update Event' pages
+# Date part of format should be identical to 'date_format_string'
+# property.
 #########################################
-date_time_format_string = dd-MMM-yyyy HH:mm:ss
+#default: date_time_format_string = dd-MMM-yyyy HH:mm:ss
+date_time_format_string = dd/MM/yyyy HH:mm:ss
+
 
 #########################################
 # date_time_regexp
@@ -75,23 +104,32 @@ date_time_format_string = dd-MMM-yyyy HH:mm:ss
 # check against date/time fields entered by the user. This is used on the
 # application side only.
 # Years may not be 2 digits in the application.
+# Used to build error message (presentation level).
 #########################################
-#date_time_regexp = [0-9]{1,2}/[0-9]{1,2}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2} [aApP][mM]
-date_time_regexp = [0-9]{1,2}/[a-zA-Z]{3}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
+#default: date_time_regexp = [0-9]{1,2}/[a-zA-Z]{3}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
+date_time_regexp = [0-9]{1,2}/[0-9]{1,2}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
 
 #########################################
 # image_dir
 ########################################
 # The 'image_dir' points to the location of all the images in the local
-# language of the site.  Note that this is a physical location within
+# language of the clinic.  Note that this is a physical location within
 # the web server, and should not be changed, unless you have created
 # a new directory with all the language-specific files inside.
 ########################################
 image_dir = en
 
+#########################################
+# jscalendar_language_file
+#########################################
+# The 'jscalendar_language_file' points to the location of the Calendar
+# Widget js file.
+#########################################
 jscalendar_language_file = calendar-en.js
 
-mid_date_format = MM/dd
+#used by RSS feeder, should be tested for i18n
+#default: mid_date_format = MM/dd
+mid_date_format = dd/MM
 
 ########################################
 # nullValue
@@ -101,13 +139,15 @@ mid_date_format = MM/dd
 # this is a physical location and should not be changed unless you have
 # created a new page on the server with this information.
 ########################################
+
+#this page should be part of localization
+#it should be put under /tomcat/webapps/{OpenClinica-instance}/WEB-INF/jsp/
 nullValue = nullValue.htm
 
 ########################################
 # The following strings are used to standardize date strings for CRFs
 # and for data submitted, and should not be changed.
 ########################################
-oc_date_format_string = MM/dd/yyyy
 
 #########################################
 # phone_format
@@ -117,6 +157,8 @@ oc_date_format_string = MM/dd/yyyy
 # in the user interface.
 # Years may not be 2 digits in the application.
 #########################################
+
+#used by Validator to display a error message for phone number 
 phone_format = 123-456-7890
 
 #########################################
@@ -124,5 +166,12 @@ phone_format = 123-456-7890
 #########################################
 # The 'phone_regexp' property is the regular expression for check against phone
 # numbers entered by the user.
+# phone_format and phone_regexp should match each other
 #########################################
+
+#used by Validator to validate phone number 
 phone_regexp = [0-9]{3}[\\-\\.][0-9]{3}[\\-\\.][0-9]{4}
+
+#Set the locale
+locale_string = en-gb
+
