Updated GEL properties

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -4,7 +4,7 @@ CRF_name_used_by_another_CRF_choose_unique = CRF name has been used by another C
 
 CRF_name_used_choose_unique_name = CRF name has been used, please choose a unique name.
 
-SE_does_not_belong_current_study = study event does not belong to the current study
+SE_does_not_belong_current_study = GMC event does not belong to the current GMC
 
 all_values_must_from_specified = All of the values you choose must be from the specified response set.
 
@@ -12,23 +12,23 @@ an_invalid_step_was_specified = An invalid step was specified while editing a us
 
 an_invalid_submit_button_was_clicked = An invalid submit button was clicked while editing a user.
 
-another_assigned_this_ID_choose_unique = Another subject has been assigned this Study Subject ID.  Please choose a unique identifier.
+another_assigned_this_ID_choose_unique = Another participant has been assigned this Participant ID.  Please choose a unique identifier.
 
 anwer_not_match = Your answers for this value did not match.  Please provide answers that match one another.
 
 argument = argument
 
-begin_data_entry_without_event_but_CRF = You are trying to begin data entry for a CRF within a Study Event, but the specified CRF version does not exist.
+begin_data_entry_without_event_but_CRF = You are trying to begin data entry for a CRF within a GMC Event, but the specified CRF version does not exist.
 
-begin_data_entry_without_event_but_especified_event = You are trying to begin data entry for a CRF within a Study Event, but the specified study event definition does not exist within the study.
+begin_data_entry_without_event_but_especified_event = You are trying to begin data entry for a CRF within a GMC Event, but the specified GMC event definition does not exist within the GMC.
 
-begin_data_entry_without_event_but_study = You are trying to begin data entry for a CRF within a Study Event, but the study event definition for this study event does not exist within the study.
+begin_data_entry_without_event_but_study = You are trying to begin data entry for a CRF within a GMC Event, but the GMC event definition for this GMC event does not exist within the GMC.
 
-begin_data_entry_without_event_but_subject = You are trying to begin data entry for a CRF within a Study Event, but the subject does not exist within the study.
+begin_data_entry_without_event_but_subject = You are trying to begin data entry for a CRF within a GMC Event, but the participant does not exist within the GMC.
 
-could_not_create_study_subject = Could not create study subject.
+could_not_create_study_subject = Could not create GMC participant.
 
-could_not_create_subject = Could not create subject.
+could_not_create_subject = Could not create participant.
 
 database_error = There was a database error during data entry.  Please try again.
 
@@ -36,9 +36,9 @@ date_provided_not_past = The date you provided is not in the past.
 
 different_number_of_groups = There are a different number of groups in this entry than in the previous data entry session.
 
-entity_not_belong_studies = The entity does not belong to studies of current user
+entity_not_belong_studies = The entity does not belong to gmcs of current user
 
-event_CRF_not_belong_current_study = Event CRF does not belong to current study
+event_CRF_not_belong_current_study = Event CRF does not belong to current GMC
 
 event_CRF_not_belong_current_user = Event CRF does not belong to current user
 
@@ -74,11 +74,11 @@ group_class_is_required = This group class is required.
 
 group_class_type_is_required = Group Class Type is required.
 
-has_already_enrolled_parent_study = has already been enrolled in the parent study.
+has_already_enrolled_parent_study = has already been enrolled in the parent GMC.
 
-has_already_enrolled_site = \ has already been enrolled in the site (
+has_already_enrolled_site = \ has already been enrolled in the clinic (
 
-has_already_enrolled_site_study = \ has already been enrolled in another site of the study.
+has_already_enrolled_site_study = \ has already been enrolled in another clinic of the GMC.
 
 has_been_removed_succesfully = has been removed successfully.
 
@@ -120,7 +120,7 @@ input_provided_not_occure_after_previous_start_date_time = The input you provide
 
 input_should_be_between = The input should be between\t
 
-is_already_enrolled_in_this_study = is already enrolled in this study.
+is_already_enrolled_in_this_study = is already enrolled in this GMC.
 
 is_invalid_because_wrong_paired_parenthesises = is invalid because parenthesises are not correctly paired
 
@@ -158,9 +158,9 @@ no_action_specified_or_invalid = No action was specified, or an invalid action w
 
 no_permission = no permission
 
-no_permission_to_add_new_study_event = no permission to add new study event
+no_permission_to_add_new_study_event = no permission to add new GMC event
 
-no_permission_to_add_new_subject = no permission to add new subject
+no_permission_to_add_new_subject = no permission to add new participant
 
 no_permission_to_create_discrepancy_note = no permission to create a discrepancy note
 
@@ -186,7 +186,7 @@ not_director = not director
 
 not_select_valid_entity = You did not select a valid entity.
 
-not_select_valid_entity_current_study = You did not select a valid entity in the current study.
+not_select_valid_entity_current_study = You did not select a valid entity in the current GMC.
 
 not_study_director = not Study Director
 
@@ -194,9 +194,9 @@ not_study_director_or_study_coordinator = not Study Director or Data Manager
 
 not_study_director_or_study_cordinator = not Study Director or Data Manager
 
-not_study_owner = not study owner
+not_study_owner = not GMC owner
 
-not_top_study = not top study
+not_top_study = not top GMC
 
 not_unpopulated = not unpopulated
 
@@ -206,7 +206,7 @@ number_expected_in = Number was expected in
 
 number_of_arguments_incorrect = the number of arguments is incorrect
 
-of_current_study_need_to_move = \ of current study. If you need to move this subject to a different site,
+of_current_study_need_to_move = \ of current GMC. If you need to move this participant to a different clinic,
 
 on_event_CRF_inappropiate_action = on an Event CRF, but that is an inappropriate action for that Event CRF.
 
@@ -218,7 +218,7 @@ owner_attempting_double_data_entry = owner attempting double data entry on event
 
 password_must_be_at_least = The password must be at least\t
 
-person_ID_used_by_another_choose_unique = Person ID has been used by another subject, please choose a unique one.
+person_ID_used_by_another_choose_unique = Person ID has been used by another participant, please choose a unique one.
 
 please_choose_a_CRF_to_add_new_version_for = Please choose a CRF to add new version for.
 
@@ -228,15 +228,15 @@ please_choose_a_CRF_version_to_remove = Please choose a CRF Version to remove.
 
 please_choose_a_CRF_version_to_update = Please choose a CRF to update.
 
-please_choose_a_subject_to_remove = Please choose a subject to remove.
+please_choose_a_subject_to_remove = Please choose a participant to remove.
 
-please_choose_valid_female_subject_as_mother = Please choose a valid female subject as the mother.
+please_choose_valid_female_subject_as_mother = Please choose a valid female participant as the mother.
 
-please_choose_valid_male_subject_as_father = Please choose a valid male subject as the father.
+please_choose_valid_male_subject_as_father = Please choose a valid male participant as the father.
 
 please_enter_a_valid_year_birth = Please enter a valid Year Of Birth.
 
-please_have_user_manage_privileges = \ please have a user with Manage Study privileges reassign the subject.
+please_have_user_manage_privileges = \ please have a user with Manage GMC privileges reassign the participant.
 
 pwd_needs_digits = Password should contain at least one digit.
 
@@ -266,11 +266,11 @@ should_not_contain_comma = should not contain comma
 
 should_not_followed_by_character = should not be followed by the character
 
-study_event_not_belong_study = study event does not belong to the current study
+study_event_not_belong_study = GMC event does not belong to the current GMC
 
-subject_ID_used_by_another_choose_unique = Study Subject ID has been used by another subject in current study, please choose a unique one.
+subject_ID_used_by_another_choose_unique = Participant ID has been used by another participant in current GMC, please choose a unique one.
 
-subject_with_person_ID = A subject with the Person ID:
+subject_with_person_ID = A participant with the Person ID:
 
 syntax_incorrect = The syntax is incorrect.
 
@@ -278,7 +278,7 @@ the_character = The character
 
 the_CRF = The CRF
 
-the_subject = The Subject
+the_subject = The Participant
 
 the_user_attemping_to_view_not_exists = The user you are attempting to view does not exist.
 
@@ -288,21 +288,21 @@ there_was_an_error_sending_reset_email_try_reset = There was an error sending th
 
 these_field_cannot_be_modified_because_not_owner = These fields cannot be modified because you are not the CRF owner, and if you continue, the PHI, UNITS, DESCRIPTION, and/or DATA_TYPE for this item will be ignored. If you do wish to keep your settings, please go back and rename the item to one that does not already exist in the CRF.
 
-this_study_has_been_removed_succesfully = This study has been removed successfully.
+this_study_has_been_removed_succesfully = This GMC has been removed successfully.
 
-this_subject_person_ID = This subject (Person ID:
+this_subject_person_ID = This participant (Person ID:
 
-this_subject_with_person_ID = This subject with Person ID:
+this_subject_with_person_ID = This participant with Person ID:
 
-trying_to_begin_DE1 = You are trying to begin data entry for a CRF within a Study Event, but the subject does not exist within the study.
+trying_to_begin_DE1 = You are trying to begin data entry for a CRF within a GMC Event, but the participant does not exist within the GMC.
 
-trying_to_begin_DE2 = You are trying to begin data entry for a CRF within a Study Event, but the study event definition for this study event does not exist within the study.
+trying_to_begin_DE2 = You are trying to begin data entry for a CRF within a GMC Event, but the GMC event definition for this GMC event does not exist within the GMC.
 
-trying_to_begin_DE3 = You are trying to begin data entry for a CRF within a Study Event, but the specified CRF version does not exist.
+trying_to_begin_DE3 = You are trying to begin data entry for a CRF within a GMC Event, but the specified CRF version does not exist.
 
-trying_to_begin_DE4 = You are trying to begin data entry for a CRF within a Study Event, but the specified study event definition does not exist within the study.
+trying_to_begin_DE4 = You are trying to begin data entry for a CRF within a GMC Event, but the specified GMC event definition does not exist within the GMC.
 
-unique_protocol_id_existed = A Study with this Unique Protocol ID already exists in the database.  Please choose another Unique Protocol ID.
+unique_protocol_id_existed = A GMC with this Unique Protocol ID already exists in the database.  Please choose another Unique Protocol ID.
 
 username_already_exists = The user name you selected already exists.
 
@@ -352,9 +352,9 @@ or_language_mismatched = or language mismatched
 field_not_have_colons_or_semi = This field cannot have colons or semicolons or asterisk.
 
 # Error messages for accessing the OpenClinica page with Restful URL
-invalid_study_oid = Invalid study OID
+invalid_study_oid = Invalid GMC OID
 
-invalid_subject_oid = Invalid subject OID
+invalid_subject_oid = Invalid participant OID
 
 invalid_event_oid = Invalid event OID
 
