--- a/web/src/main/resources/org/akaza/openclinica/i18n/licensing.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/licensing.properties
@@ -1,6 +1,6 @@
 # The information below must be part of every OpenClinica instance used and can not be changed.  If you would like to become an Enterprise user of OpenClinica, please send an # email to enterprise@openclinica.org for more information.
 # DO NOT CHANGE ANY OF THE TEXT BELOW
-Version_release = Version: ${pom.version} - Changeset: ${changeSet} ${changeSetDate}
+Version_release = Version: 3.4 - Changeset: c37af906f671 2014-10-07 15:00 +0000
 
 footer.license.1=&copy; 2004-<script>document.write(new Date().getFullYear())</script> OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a> 
 footer.license.2=is provided AS IS, without warranty. Licensed under LGPLv2.1, you can redistribute it and/or modify it under the terms of the 
