--- a/web/src/main/resources/org/akaza/openclinica/i18n/format.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/format.properties
@@ -4,11 +4,13 @@
 #########################################
 # The 'date_format' property is used by Validator to build error
 # message about what format should be for a date UI level
-# (UpdateSubject, ViewStudyEvents) to instruct user what  date
+# (UpdateParticipant, ViewGMCEvents) to instruct user what  date
 # format should be used should be identical to date_format_string
 # Years may not be 2 digits in the application.
 #########################################
-date_format = DD-MMM-YYYY 
+#default: date_format = DD-MMM-YYYY 
+date_format = DD/MM/YYYY 
+
 
 #########################################
 # date_format_calender
@@ -17,7 +19,8 @@ date_format = DD-MMM-YYYY
 # from Calendar Widget.
 # Years may not be 2 digits in the application.
 #########################################
-date_format_calender = %d-%b-%Y
+#default: date_format_calender = %d-%b-%Y
+date_format_calender = %d/%m/%Y
 
 #########################################
 # date_format_string
@@ -28,11 +31,13 @@ date_format_calender = %d-%b-%Y
 #########################################
 
 #used to display format on jsp & build resourceBundle
-date_format_string = dd-MMM-yyyy
+#default: date_format_string = dd-MMM-yyyy
+date_format_string = dd/MM/yyyy
+
 
 #should be removed
-date_format_string_ds = yyyy-MM-dd 
-
+#default: date_format_string_ds = yyyy-MM-dd 
+date_format_string_ds = dd/MM/yyyy
 
 
 #########################################
@@ -52,7 +57,8 @@ date_format_year = YYYY
 
 #used by Validator for partial date error message,
 #ODMExtractDao. 
-date_format_year_month = MMM-yyyy
+#default: date_format_year_month = MMM-yyyy
+date_format_year_month = MM/yyyy
 
 #########################################
 # date_regexp
@@ -64,7 +70,8 @@ date_format_year_month = MMM-yyyy
 #########################################
 
 #used to build an error message for date format
-date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
+#default: date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
+date_regexp = [0-9]{1,2}/[0-9]{1,2}}[0-9]{4}
 
 #########################################
 # date_time_format
@@ -73,7 +80,8 @@ date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
 # field, to instruct the user which format to submit date/time fields.
 # Years may not be 2 digits in the application.
 #########################################
-date_time_format = DD-MMM-YYYY HH:MM
+#default: date_time_format = DD-MMM-YYYY HH:MM
+date_time_format = DD/MM/YYYY HH:MM
 
 #########################################
 # date_time_format_string
@@ -85,7 +93,9 @@ date_time_format = DD-MMM-YYYY HH:MM
 # Date part of format should be identical to 'date_format_string'
 # property.
 #########################################
-date_time_format_string = dd-MMM-yyyy HH:mm:ss
+#default: date_time_format_string = dd-MMM-yyyy HH:mm:ss
+date_time_format_string = dd/MM/yyyy HH:mm:ss
+
 
 #########################################
 # date_time_regexp
@@ -96,13 +106,14 @@ date_time_format_string = dd-MMM-yyyy HH:mm:ss
 # Years may not be 2 digits in the application.
 # Used to build error message (presentation level).
 #########################################
-date_time_regexp = [0-9]{1,2}/[a-zA-Z]{3}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
+#default: date_time_regexp = [0-9]{1,2}/[a-zA-Z]{3}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
+date_time_regexp = [0-9]{1,2}/[0-9]{1,2}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
 
 #########################################
 # image_dir
 ########################################
 # The 'image_dir' points to the location of all the images in the local
-# language of the site.  Note that this is a physical location within
+# language of the clinic.  Note that this is a physical location within
 # the web server, and should not be changed, unless you have created
 # a new directory with all the language-specific files inside.
 ########################################
@@ -117,7 +128,8 @@ image_dir = en
 jscalendar_language_file = calendar-en.js
 
 #used by RSS feeder, should be tested for i18n
-mid_date_format = MM/dd
+#default: mid_date_format = MM/dd
+mid_date_format = dd/MM
 
 ########################################
 # nullValue
@@ -136,9 +148,6 @@ nullValue = nullValue.htm
 # The following strings are used to standardize date strings for CRFs
 # and for data submitted, and should not be changed.
 ########################################
-
-##not used, should be cleaned up
-#oc_date_format_string = yyyy-MM-dd
 
 #########################################
 # phone_format
@@ -162,3 +171,7 @@ phone_format = 123-456-7890
 
 #used by Validator to validate phone number 
 phone_regexp = [0-9]{3}[\\-\\.][0-9]{3}[\\-\\.][0-9]{4}
+
+#Set the locale
+locale_string = en-gb
+
