--- a/web/src/main/resources/org/akaza/openclinica/i18n/workflow.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/workflow.properties
@@ -3,37 +3,37 @@
 Specify_criteria = Specify Criteria
 
 #menu BreadcrumbBean
-add_new_study_event = Add New Study Event
+add_new_study_event = Add New GMC Event
 
-add_new_subject = Add New Subject
+add_new_subject = Add New Participant
 
-add_subject = Add Subject
+add_subject = Add Participant
 
 administer_CRFs = Administer CRFs
 
 administer_CRFs2 = Administer Case Report Forms (CRFs)
 
-administer_studies = Administer Studies
+administer_studies = Administer GMCs
 
-administer_subjects = Administer Subjects
+administer_subjects = Administer Participants
 
 administer_system = Administer System
 
 administer_users = Administer Users
 
-assign_new_users_to_study = Assign New Users to Study
+assign_new_users_to_study = Assign New Users to GMC
 
-assign_subject_to_group = Assign Subject to Group
+assign_subject_to_group = Assign Participant to Group
 
 business_admin = Business Admin
 
 business_administrator = Business Administrator
 
-change_current_study = Change Current Study
+change_current_study = Change Current GMC
 
-change_study = Change Study
+change_study = Change GMC
 
-change_study_site = Change Study/Site
+change_study_site = Change GMC/Clinic
 
 check_version = Check Version
 
@@ -51,15 +51,15 @@ create_a_new_CRF = Create a New CRF
 
 create_a_new_CRF_case_report_form = Create a New Case Report Form (CRF)
 
-create_a_new_study_event_definition = Create a New Study Event Definition
+create_a_new_study_event_definition = Create a New GMC Event Definition
 
 create_dataset_instructions = Create Dataset Instructions
 
-create_new_site = Create New Site
+create_new_site = Create New Clinic
 
-create_study_event_definition = Create Study Event Definition
+create_study_event_definition = Create GMC Event Definition
 
-create_subject_group_class = Create Subject Group Class
+create_subject_group_class = Create Participant Group Class
 
 create_user_account = Create User Account
 
@@ -83,9 +83,9 @@ edit_user_account = Edit User Account
 
 edit_user_role = Edit User Role
 
-enroll_subject = Enroll Subject
+enroll_subject = Enroll Participant
 
-enroll_subject_instructions = Enroll Subject Instructions
+enroll_subject_instructions = Enroll Participant Instructions
 
 enter_version_name = Enter Version Name
 
@@ -125,13 +125,13 @@ manage_groups = Manage Groups
 
 manage_rules = Manage Rules
 
-manage_sites = Manage Sites
+manage_sites = Manage Clinics
 
-manage_study = Manage Study
+manage_study = Manage GMC
 
-manage_study_event_definitions = Manage Study Event Definitions
+manage_study_event_definitions = Manage GMC Event Definitions
 
-manage_subjects = Manage Subjects
+manage_subjects = Manage Participants
 
 manage_users = Manage Users
 
@@ -141,35 +141,35 @@ openclinica_enterprise = OpenClinica Enterprise
 
 overview = Overview
 
-reassign_study_subject = Reassign Study Subject
+reassign_study_subject = Reassign Participant
 
 related_information = Related Information
 
 remove_CRF = Remove CRF
 
-remove_a_site = Remove a Site
+remove_a_site = Remove a Clinic
 
-remove_a_study = Remove a Study
+remove_a_study = Remove a GMC
 
 remove_event_definition = Remove Event Definition
 
-remove_subject = Remove Subject
+remove_subject = Remove Participant
 
 remove_user_role = Remove User Role
 
-request_study_access = Request Study Access
+request_study_access = Request GMC Access
 
 restore_CRF = Restore CRF
 
 restore_CRF_version = Restore CRF Version
 
-restore_a_site = Restore a Site
+restore_a_site = Restore a Clinic
 
-restore_a_study = Restore a Study
+restore_a_study = Restore a GMC
 
 restore_event_definition = Restore Event Definition
 
-restore_subject = Restore Subject
+restore_subject = Restore Participant
 
 review_SQL_generated = Review SQL Generated
 
@@ -177,7 +177,7 @@ review_new_items = Review New Items
 
 select_CRF = Select CRF
 
-select_items_event = Select Items or Event/Subject Attributes
+select_items_event = Select Items or Event/Participant Attributes
 
 select_parameters = Select Parameters
 
@@ -187,19 +187,19 @@ set_user_role = Set User Role
 
 specify_dataset_properties = Specify Dataset Properties
 
-study_description = Study Description
+study_description = GMC Description
 
-study_design = Study Design
+study_design = GMC Design
 
-study_event = Study Event
+study_event = GMC Event
 
-study_event_definitions = Study Events Definitions
+study_event_definitions = GMC Events Definitions
 
-study_event_overview = Study Event Overview
+study_event_overview = GMC Event Overview
 
-study_status = Study Status
+study_status = GMC Status
 
-subjects = Subjects
+subjects = Participants
 
 submit_data = Submit Data
 
@@ -215,11 +215,11 @@ update_CRF = Update CRF
 
 update_profile = Update Profile
 
-update_study_event = Update Study Event
+update_study_event = Update GMC Event
 
-update_study_event_definition = Update Study Event Definition
+update_study_event_definition = Update GMC Event Definition
 
-update_subject = Update Subject
+update_subject = Update Participant
 
 update_user_profile = Update User Profile
 
@@ -239,7 +239,7 @@ view_CRF_version_metadata = View CRF Version Metadata
 
 view_CRF_version_section_data = View CRF Version Section Data
 
-view_all_subjects = View All Subjects
+view_all_subjects = View All Participants
 
 view_dataset = View Dataset
 
@@ -257,17 +257,17 @@ view_events = View Events
 
 view_filters = View Filters
 
-view_site = View Site
+view_site = View Clinic
 
-view_site_details = View Site Details
+view_site_details = View Clinic Details
 
-view_study_details = View Study Details
+view_study_details = View GMC Details
 
-view_study_events = View Study Events
+view_study_events = View GMC Events
 
-view_study_subject = View Study Subject
+view_study_subject = View Participant
 
-view_subject = View Subject
+view_subject = View Participant
 
 view_user_account = View User Account
 
